syntax = "proto3";

option csharp_namespace = "AviaCompany.Grpc.Contracts";

package aviacompany;

// Сообщение с данными билета (от генератора к API)
message TicketResponse {
int32 flight_id = 1;
int32 passenger_id = 2;
string seat_number = 3;
bool has_hand_luggage = 4;
double baggage_weight = 5;
}

// Ответ от API о статусе обработки (от API к генератору)
message TicketCallback {
bool success = 1;
string error = 2;
}

// Сервис генератора билетов
service TicketGenerator {
// Двунаправленный стриминг:
// - Генератор отправляет поток TicketResponse
// - API отправляет в ответ поток TicketCallback
rpc StreamTickets (stream TicketCallback) returns (stream TicketResponse);
}